# Resummation-in-QM

./: .gitignore  Readme.md
FUNNEL_POTENT/: README.txt
FUNNEL_POTENT/1_25kmoments_2kdig/Constants/: Constant.txt  Constant_2kdig.txt  compile.out  constant.cpp  constant.out
FUNNEL_POTENT/1_25kmoments_2kdig/first/: CMakeLists.txt  compile.err  compile.out  first.cpp  first.out  together.job
FUNNEL_POTENT/1_25kmoments_2kdig/fourth/: compile.err  compile.job  compile.out  fourth.cpp  fourth.out  together.job
FUNNEL_POTENT/1_25kmoments_2kdig/function/: compile.err  compile.out  function.cpp  function.out  together.job
FUNNEL_POTENT/1_25kmoments_2kdig/results/: FIFTH.txt  FIRST.txt  FOURTH.txt  SECOND.txt  THIRD.txt  compile.out  disectres_1200dig.txt  disectres_2kdig.txt  result.cpp  result.out  together.job
FUNNEL_POTENT/1_25kmoments_2kdig/second/: compile.err  compile.job  compile.out  second.cpp  second.out  together.job
FUNNEL_POTENT/1_25kmoments_2kdig/third/: compile.err  compile.job  compile.out  third.cpp  third.out  together.job
FUNNEL_POTENT/Pade/constants/: Constant.txt  const.sh  constant  constant.cpp
FUNNEL_POTENT/Pade/pade_proper/: Pade  moments.txt  mpfr.sh  pade.cpp  pade.txt
FUNNEL_POTENT/construct_P_2kdig/: CMakeLists.txt  LU.cpp  README.md  compile.job  together.job
FUNNEL_POTENT/moments/: compile.job  moments.cpp  moments.txt  mpfr.sh  together.job
PT_SYMM/: README.txt
PT_SYMM/Construct_P/0_2k_P_block/: LU.cpp  together.job
PT_SYMM/Pade_Approximant/Constants/: Constant.txt  compile.out  constant.cpp  constant.out
PT_SYMM/Pade_Approximant/pade_proper/: compile.out  pade.cpp  pade.out  pade.txt  together.job
PT_SYMM/moments/: moments.cpp  together.job
QUARTIC/: README.txt
QUARTIC/1_5kmom_1kdig/Constants/: Constant.txt  README  README.md  compile.err  compile.job  compile.out  constant.cpp  constant.out  together.job
QUARTIC/1_5kmom_1kdig/first_parall/: README.md  compile.out  first.cpp  first.out  mpfr.sh  together.job
QUARTIC/1_5kmom_1kdig/fourth_parall/: CMakeLists.txt  README.md  compile.out  fourth.cpp  fourth.out  mpfr.sh  run.sh  together.job
QUARTIC/1_5kmom_1kdig/function/: CMakeLists.txt  README.md  compile.err  compile.job  compile.out  function.cpp  function.out  mpfr.sh  run.sh  together.job
QUARTIC/1_5kmom_1kdig/results/: CMakeLists.txt  README.md  compile.err  compile.job  compile.out  result.cpp  result.out  run.sh  together.job
QUARTIC/1_5kmom_1kdig/second_parall/: CMakeLists.txt  README.md  compile.err  compile.out  mpfr.sh  run.sh  second.cpp  second.out  together.job
QUARTIC/1_5kmom_1kdig/third_parall/: README.md  compile.err  compile.job  compile.out  mpfr.sh  second.err  third.cpp  third.out  together.job
QUARTIC/Pade_Approximant/Constants/: CMakeLists.txt  Constant.txt  compile.err  compile.job  compile.out  constant.cpp  constant.out  run.sh
QUARTIC/Pade_Approximant/pade_proper/: compile.err  compile.job  compile.out  pade.cpp  pade.out  pade.txt
QUARTIC/construct_P_3kdig/0_2k_P_block/: LU.cpp  mpfr.sh  together.job
QUARTIC/moments/: CMakeLists.txt  README.md  moments  moments.cpp  run.sh  together.job
SEXTIC/: README.md  README.txt
SEXTIC/1_5kmom_1_5kdig/Constants/: .README.md.swp  CMakeLists.txt  Constant.txt  LU.cpp  README.md  compile.err  compile.job  compile.out  constant.cpp  constant.out  run.sh  together.job
SEXTIC/1_5kmom_1_5kdig/first_parall/: README.md  compile.err  compile.job  compile.out  first.cpp  first.out  run.sh  together.job
SEXTIC/1_5kmom_1_5kdig/fourth_parall/: README.md  compile.err  compile.job  compile.out  fourth.cpp  fourth.out  together.job
SEXTIC/1_5kmom_1_5kdig/function/: README.md  compile.err  compile.job  compile.out  function.cpp  function.err  function.out  together.job
SEXTIC/1_5kmom_1_5kdig/results/: CMakeLists.txt  FIFTH.txt  FIRST.txt  FOURTH.txt  README.md  SECOND.txt  THIRD.txt  compile.err  compile.job  compile.out  disectres.txt  disectres_less_beta.txt  result.cpp  result.out  run.sh  together.job
SEXTIC/1_5kmom_1_5kdig/second_parall/: README.md  compile.job  compile.out  second.cpp  second.err  second.out  together.job
SEXTIC/1_5kmom_1_5kdig/third_parall/: CMakeLists.txt  README.md  compile.err  compile.out  run.sh  third.cpp  third.out  together.job
SEXTIC/Construct_P/0_2k_P_block/: LU.cpp  README.md  compile.job  run.sh
SEXTIC/moments/: CMakeLists.txt  README.md  moments.cpp  mpfr.sh  together.job
